<resources>
    <string name="app_name">LolzGuru</string>
    <string name="title_home">Home</string>
    <string name="title_back">Back</string>
    <string name="title_forward">Forward</string>
    <string name="title_share">Share</string>
    <string name="title_reload">Reload</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>