<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/navigation_back"
        android:icon="@drawable/ic_back"
        android:title="@string/title_back" />
    <item
        android:id="@+id/navigation_forward"
        android:icon="@drawable/ic_forward"
        android:title="@string/title_forward" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_reload"
        android:icon="@drawable/ic_reload"
        android:title="@string/title_reload" />
    <item
        android:id="@+id/navigation_share"
        android:icon="@drawable/ic_share"
        android:title="@string/title_share" />

</menu>